--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
     <!-- Important: Prevent indexing -->
-    <meta name="robots" content="noindex, nofollow" />
-    <link rel="canonical" href="https://www.shivamforge.com/products" />
+    <!-- <meta name="robots" content="noindex, nofollow" /> -->
+    <link rel="canonical" href="https://www.shivamforge.com/products/684aabbeb0e39eaeb8da5d30" />
 
     <!-- SEO Meta -->
     <meta name="author" content="Shivam Forge" />
