--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <meta name="description" content="Shivam Forge. Area, Ganga Gate, Shapar, Gujarat. Call: 9265772827, 6352877378. Shivam Forge offers world-class forging, casting, and machining solutions with CNC/VMC machines, zinc plating, precision labs, and more." />
 
     <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-
-    <!-- Important: Prevent indexing -->
-    <!-- <meta name="robots" content="noindex, nofollow" /> -->
-    <link rel="canonical" href="https://www.shivamforge.com/products/684aabbeb0e39eaeb8da5d30" />
+    <link rel="icon" href="/favicon.ico?v=2" type="image/x-icon" />
 
     <!-- SEO Meta -->
     <meta name="author" content="Shivam Forge" />
